--- a/src/index.html
+++ b/src/index.html
@@ -260,12 +260,12 @@
             <span>Play Melody</span> 🔊
           </button>
           
-          <div class="memory-grid">
-            <button class="memory-button c4" @click="addToSequence('C4')">C</button>
-            <button class="memory-button d4" @click="addToSequence('D4')">D</button>
-            <button class="memory-button e4" @click="addToSequence('E4')">E</button>
-            <button class="memory-button f4" @click="addToSequence('F4')">F</button>
-            <button class="memory-button g4" @click="addToSequence('G4')">G</button>
+          <div class="piano-keyboard">
+            <button class="piano-key white c4" @click="addToSequence('C4')" :class="{ 'active': currentHighlightedNote === 'C4' }">C</button>
+            <button class="piano-key white d4" @click="addToSequence('D4')" :class="{ 'active': currentHighlightedNote === 'D4' }">D</button>
+            <button class="piano-key white e4" @click="addToSequence('E4')" :class="{ 'active': currentHighlightedNote === 'E4' }">E</button>
+            <button class="piano-key white f4" @click="addToSequence('F4')" :class="{ 'active': currentHighlightedNote === 'F4' }">F</button>
+            <button class="piano-key white g4" @click="addToSequence('G4')" :class="{ 'active': currentHighlightedNote === 'G4' }">G</button>
           </div>
           
           <div class="sequence-progress">
