Match Sounds: - die selbe melodie bei erneutem play button click wiederholen bis man es richtig hat

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
         <div x-show="mode === 'match'" class="pitch-activity">
           <h3>Match the sound to the picture!</h3>
           
-          <button class="circular-play-button" @click="setupMatchingMode(true)" aria-label="Play Melody">
+          <button class="circular-play-button" @click="setupMatchingMode(true, false)" aria-label="Play Melody">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
               <path d="M8 5v14l11-7z"/>
             </svg>
