--- a/src/index.html
+++ b/src/index.html
@@ -252,10 +252,10 @@
 
           
           <div class="guess-options">
-            <button class="guess-button up" @click="checkGuess('up')">
+            <button class="guess-button up" @click="checkGuess('up')" data-direction="up">
               <span>Up</span> ⬆️
             </button>
-            <button class="guess-button down" @click="checkGuess('down')">
+            <button class="guess-button down" @click="checkGuess('down')" data-direction="down">
               <span>Down</span> ⬇️
             </button>
           </div>
