Back zu Menu-> Home

--- a/src/index.html
+++ b/src/index.html
@@ -164,12 +164,11 @@
         <!-- Listening Mode -->
         <div x-show="mode === 'listen'" class="pitch-activity">
           <div class="mode-header">
-            <h3>Listen to different melodies!</h3>
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
               </svg>
-              <span>Back to Menu</span>
+              <span>Home</span>
             </button>
           </div>
           
@@ -211,12 +210,11 @@
         <!-- Matching Mode -->
         <div x-show="mode === 'match'" class="pitch-activity">
           <div class="mode-header">
-            <h3>Match the sound to the picture!</h3>
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
               </svg>
-              <span>Back to Menu</span>
+              <span>Home</span>
             </button>
           </div>
           <button class="circular-play-button" @click="playCurrentMelody()" aria-label="Play Melody">
@@ -257,12 +255,11 @@
         <!-- Drawing Mode -->
         <div x-show="mode === 'draw'" class="pitch-activity">
           <div class="mode-header">
-            <h3>Draw a melody!</h3>
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
               </svg>
-              <span>Back to Menu</span>
+              <span>Home</span>
             </button>
           </div>
           
@@ -284,12 +281,11 @@
         <!-- Guessing Mode -->
         <div x-show="mode === 'guess'" class="pitch-activity">
           <div class="mode-header">
-            <h3>What comes next?</h3>
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
               </svg>
-              <span>Back to Menu</span>
+              <span>Home</span>
             </button>
           </div>
           <button class="circular-play-button" @click="playCurrentMelody()" aria-label="Play Melody">
@@ -314,12 +310,11 @@
         <!-- Memory Mode -->
         <div x-show="mode === 'memory'" class="pitch-activity">
           <div class="mode-header">
-            <h3>Remember the melody!</h3>
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
               </svg>
-              <span>Back to Menu</span>
+              <span>Home</span>
             </button>
           </div>
           <button class="circular-play-button" @click="playCurrentMelody()" aria-label="Play Melody">
