--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,13 @@
         <!-- Chapters Section -->
         <div class="menu-chapters">
           <button @click="$data.active = 'pitches'; $dispatch('set-pitch-mode', 'main'); window.innerWidth < 1024 ? menuOpen = false : null" :class="{ 'active': active === 'pitches' }">
-            🎵 <span x-text="$store.strings.menu_pitches || 'Pitches & Melodies'"></span>
+            <span x-text="$store.strings.menu_pitches || 'Pitches & Melodies'"></span>
+          </button>
+          <button @click="$data.active = 'feelingchords'; window.innerWidth < 1024 ? menuOpen = false : null" :class="{ 'active': active === 'feelingchords' }">
+            💝 <span>Feeling Chords</span>
           </button>
           <button @click="$data.active = 'tonecolors'; window.innerWidth < 1024 ? menuOpen = false : null" :class="{ 'active': active === 'tonecolors' }">
-            🎨 <span x-text="$store.strings.menu_tonecolors || 'Tone Colors'"></span>
+            <span x-text="$store.strings.menu_tonecolors || 'Tone Colors'"></span>
           </button>
           <button @click="$data.active = 'rhythms'; window.innerWidth < 1024 ? menuOpen = false : null" :class="{ 'active': active === 'rhythms' }">
             ⏱️ <span x-text="$store.strings.menu_rhythm || 'Rhythm'"></span>
@@ -125,7 +128,189 @@
             </button>
           </div>
         </template>
-        
+
+        <!-- Activities Section for Feeling Chords -->
+        <template x-if="active === 'feelingchords'">
+          <div class="menu-activities">
+            <button 
+              @click="$data.active = 'feelingchords'; $dispatch('set-tonecolor-mode', 'warm-cold'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.tonecolorMode', value => isActive = value === 'warm-cold')"
+              :class="{ 'active': isActive }"
+            >
+              🔥❄️ <span x-text="$store.strings.warm_cold || 'Warm vs Cold'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'feelingchords'; $dispatch('set-tonecolor-mode', 'soft-sharp'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.tonecolorMode', value => isActive = value === 'soft-sharp')"
+              :class="{ 'active': isActive }"
+            >
+              🪶⚡ <span x-text="$store.strings.soft_sharp || 'Soft vs Sharp'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'feelingchords'; $dispatch('set-tonecolor-mode', 'instruments'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.tonecolorMode', value => isActive = value === 'instruments')"
+              :class="{ 'active': isActive }"
+            >
+              🎻 <span x-text="$store.strings.instruments || 'Instrument Sounds'"></span>
+            </button>
+          </div>
+        </template>
+
+        <!-- Activities Section for Tone Colors -->
+        <template x-if="active === 'tonecolors'">
+          <div class="menu-activities">
+            <button 
+              @click="$data.active = 'tonecolors'; $dispatch('set-tonecolor-mode', 'warm-cold'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.tonecolorMode', value => isActive = value === 'warm-cold')"
+              :class="{ 'active': isActive }"
+            >
+              🔥❄️ <span x-text="$store.strings.warm_cold || 'Warm vs Cold'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'tonecolors'; $dispatch('set-tonecolor-mode', 'soft-sharp'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.tonecolorMode', value => isActive = value === 'soft-sharp')"
+              :class="{ 'active': isActive }"
+            >
+              🪶⚡ <span x-text="$store.strings.soft_sharp || 'Soft vs Sharp'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'tonecolors'; $dispatch('set-tonecolor-mode', 'instruments'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.tonecolorMode', value => isActive = value === 'instruments')"
+              :class="{ 'active': isActive }"
+            >
+              🎻 <span x-text="$store.strings.instruments || 'Instrument Sounds'"></span>
+            </button>
+          </div>
+        </template>
+
+        <!-- Activities Section for Rhythms -->
+        <template x-if="active === 'rhythms'">
+          <div class="menu-activities">
+            <button 
+              @click="$data.active = 'rhythms'; $dispatch('set-rhythm-mode', 'tap'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.rhythmMode', value => isActive = value === 'tap')"
+              :class="{ 'active': isActive }"
+            >
+              🥁 <span x-text="$store.strings.tap_rhythm || 'Tap the Rhythm'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'rhythms'; $dispatch('set-rhythm-mode', 'match'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.rhythmMode', value => isActive = value === 'match')"
+              :class="{ 'active': isActive }"
+            >
+              🔄 <span x-text="$store.strings.match_pattern || 'Match the Pattern'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'rhythms'; $dispatch('set-rhythm-mode', 'create'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.rhythmMode', value => isActive = value === 'create')"
+              :class="{ 'active': isActive }"
+            >
+              ✏️ <span x-text="$store.strings.create_rhythm || 'Create a Rhythm'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'rhythms'; $dispatch('set-rhythm-mode', 'dance'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.rhythmMode', value => isActive = value === 'dance')"
+              :class="{ 'active': isActive }"
+            >
+              💃 <span x-text="$store.strings.dance_along || 'Dance Along'"></span>
+            </button>
+          </div>
+        </template>
+
+        <!-- Activities Section for Chords -->
+        <template x-if="active === 'chords'">
+          <div class="menu-activities">
+            <button 
+              @click="$data.active = 'chords'; $dispatch('set-chord-mode', 'color-matching'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.chordMode', value => isActive = value === 'color-matching')"
+              :class="{ 'active': isActive }"
+            >
+              🌈 <span x-text="$store.strings.chord_color_matching || 'Color Matching'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'chords'; $dispatch('set-chord-mode', 'mood-landscapes'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.chordMode', value => isActive = value === 'mood-landscapes')"
+              :class="{ 'active': isActive }"
+            >
+              🏞️ <span x-text="$store.strings.mood_landscapes || 'Mood Landscapes'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'chords'; $dispatch('set-chord-mode', 'chord-building'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.chordMode', value => isActive = value === 'chord-building')"
+              :class="{ 'active': isActive }"
+            >
+              🧱 <span x-text="$store.strings.chord_building || 'Chord Building'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'chords'; $dispatch('set-chord-mode', 'missing-note'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.chordMode', value => isActive = value === 'missing-note')"
+              :class="{ 'active': isActive }"
+            >
+              🎵 <span x-text="$store.strings.missing_note || 'Missing Note'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'chords'; $dispatch('set-chord-mode', 'character-matching'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.chordMode', value => isActive = value === 'character-matching')"
+              :class="{ 'active': isActive }"
+            >
+              🎭 <span x-text="$store.strings.chord_characters || 'Character Matching'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'chords'; $dispatch('set-chord-mode', 'harmony-gardens'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.chordMode', value => isActive = value === 'harmony-gardens')"
+              :class="{ 'active': isActive }"
+            >
+              🌸 <span x-text="$store.strings.harmony_gardens || 'Harmony Gardens'"></span>
+            </button>
+          </div>
+        </template>
+
+        <!-- Activities Section for Free Play -->
+        <template x-if="active === 'freeplay'">
+          <div class="menu-activities">
+            <button 
+              @click="$data.active = 'freeplay'; $dispatch('set-freeplay-mode', 'piano'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.freeplayMode', value => isActive = value === 'piano')"
+              :class="{ 'active': isActive }"
+            >
+              🎹 <span x-text="$store.strings.piano_play || 'Piano Play'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'freeplay'; $dispatch('set-freeplay-mode', 'record'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.freeplayMode', value => isActive = value === 'record')"
+              :class="{ 'active': isActive }"
+            >
+              🎤 <span x-text="$store.strings.record_play || 'Record & Play'"></span>
+            </button>
+            <button 
+              @click="$data.active = 'freeplay'; $dispatch('set-freeplay-mode', 'explore'); window.innerWidth < 1024 ? menuOpen = false : null"
+              x-data="{ isActive: false }"
+              x-init="$watch('$store.freeplayMode', value => isActive = value === 'explore')"
+              :class="{ 'active': isActive }"
+            >
+              🔍 <span x-text="$store.strings.sound_explore || 'Sound Explorer'"></span>
+            </button>
+          </div>
+        </template>
+
         <!-- Flexible spacer to push settings and legal to bottom -->
         <div class="menu-spacer"></div>
         
@@ -369,6 +554,23 @@
     <section x-show="active === 'tonecolors'" x-transition>
       <div x-data="tonecolors" x-init="init()">
         <h2>Discover Tone Colors</h2>
+        <div class="tone-grid">
+          <div class="tone-card" @click="pick('warm')">
+            <div class="tone-icon warm"></div>
+            <p>Warm</p>
+          </div>
+          <div class="tone-card" @click="pick('cold')">
+            <div class="tone-icon cold"></div>
+            <p>Cold</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Chapter: Feeling Chords -->
+    <section x-show="active === 'feelingchords'" x-transition>
+      <div x-data="tonecolors" x-init="init()">
+        <h2>Feeling Chords</h2>
         <div class="tone-grid">
           <div class="tone-card" @click="pick('warm')">
             <div class="tone-icon warm"></div>
