backgrounds everywhere and areas transparent

--- a/src/index.html
+++ b/src/index.html
@@ -347,7 +347,7 @@
         </div>
         
         <!-- Drawing Mode -->
-        <div x-show="mode === '1_3_pitches_draw-melody'" class="pitch-activity">
+        <div x-show="mode === '1_3_pitches_draw-melody'" class="pitch-activity" style="background-image: url('./images/backgrounds/pitches_action1_no_waves_and_frog.png'); background-size: cover; background-position: top left;">
           <div class="mode-header">
             <button class="back-to-main" onclick="document.dispatchEvent(new CustomEvent('lalumo:go-home'))" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
@@ -396,7 +396,7 @@
         </div>
         
         <!-- Memory Mode -->
-        <div x-show="mode === '1_5_pitches_memory-game'" class="pitch-activity">
+        <div x-show="mode === '1_5_pitches_memory-game'" class="pitch-activity" style="background-image: url('./images/backgrounds/pitches_action1_no_waves_and_frog.png'); background-size: cover; background-position: top left;">
           <div class="mode-header">
             <button class="back-to-main" onclick="document.dispatchEvent(new CustomEvent('lalumo:go-home'))" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
