--- a/src/index.html
+++ b/src/index.html
@@ -246,7 +246,7 @@
         <!-- Listening Mode -->
         <div x-show="mode === '1_1_pitches_listen'" class="pitch-activity">
           <div class="mode-header">
-            <button class="back-to-main" onclick="document.dispatchEvent(new CustomEvent('lalumo:go-home'))" aria-label="Back to main menu">
+            <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
           </div>
@@ -289,7 +289,7 @@
         <!-- Matching Mode -->
         <div x-show="mode === '1_2_pitches_match-sounds'" class="pitch-activity" style="background-image: url('./images/backgrounds/pitches_action1.png'); background-size: cover; background-position: top left;">
           <div class="mode-header">
-            <button class="back-to-main" onclick="document.dispatchEvent(new CustomEvent('lalumo:go-home'))" aria-label="Back to main menu">
+            <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
           </div>
@@ -349,7 +349,7 @@
         <!-- Drawing Mode -->
         <div x-show="mode === '1_3_pitches_draw-melody'" class="pitch-activity" style="background-image: url('./images/backgrounds/pitches_action1_no_waves_and_frog.png'); background-size: cover; background-position: top left;">
           <div class="mode-header">
-            <button class="back-to-main" onclick="document.dispatchEvent(new CustomEvent('lalumo:go-home'))" aria-label="Back to main menu">
+            <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
           </div>
@@ -372,7 +372,7 @@
         <!-- Guessing Mode -->
         <div x-show="mode === '1_4_pitches_guess-next-note'" class="pitch-activity">
           <div class="mode-header">
-            <button class="back-to-main" onclick="document.dispatchEvent(new CustomEvent('lalumo:go-home'))" aria-label="Back to main menu">
+            <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
           </div>
@@ -398,7 +398,7 @@
         <!-- Memory Mode -->
         <div x-show="mode === '1_5_pitches_memory-game'" class="pitch-activity" style="background-image: url('./images/backgrounds/pitches_action1_no_waves_and_frog.png'); background-size: cover; background-position: top left;">
           <div class="mode-header">
-            <button class="back-to-main" onclick="document.dispatchEvent(new CustomEvent('lalumo:go-home'))" aria-label="Back to main menu">
+            <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
             </button>
           </div>
