--- a/src/index.html
+++ b/src/index.html
@@ -592,7 +592,7 @@
             <div class="landscape-viewer">
               <!-- Landscape image will change based on selected chord -->
               <div class="landscape-image">
-                <img src="./images/landscapes/sunny-field.jpg" alt="Landscape scene" id="landscape-image" />
+                <!--<img src="./images/landscapes/sunny-field.jpg" alt="Landscape scene" id="landscape-image" />-->
               </div>
             </div>
             
