rainbow and transparent butons

--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,7 @@
                  :aria-label="currentHighOrLowStage >= 3 ? ($store.strings?.second_tone_lower_a11y || 'The second tone is lower') : ($store.strings?.low_choice_a11y || 'Low tone')"
                  :title="currentHighOrLowStage >= 3 ? ($store.strings?.second_tone_lower_a11y || 'The second tone is lower') : ($store.strings?.low_choice_a11y || 'Low tone')">
               <div class="pitch-icon low-icon">
-                <img src="/images/slide.png" alt="Low pitch" />
+                <img src="/images/x.gif" alt="Low pitch" />
                 <span class="choice-label" 
                       x-text="currentHighOrLowStage >= 3 ? 
                         ($store.strings?.low_choice || 'Tiefer') : 
@@ -294,7 +294,7 @@
                  :aria-label="currentHighOrLowStage >= 3 ? ($store.strings?.second_tone_higher_a11y || 'The second tone is higher') : ($store.strings?.high_choice_a11y || 'High tone')"
                  :title="currentHighOrLowStage >= 3 ? ($store.strings?.second_tone_higher_a11y || 'The second tone is higher') : ($store.strings?.high_choice_a11y || 'High tone')">
               <div class="pitch-icon high-icon">
-                <img src="/images/rocket.png" alt="High pitch" />
+                <img src="/images/x.gif" alt="High pitch" />
                 <span class="choice-label" 
                       x-text="currentHighOrLowStage >= 3 ? 
                         ($store.strings?.high_choice || 'Höher') : 
