1_2 preload background before changing

--- a/src/index.html
+++ b/src/index.html
@@ -318,7 +318,8 @@
         </div>
                 
         <!-- Matching Mode -->
-        <div id="1_2_pitches" x-show="mode === '1_2_pitches_match-sounds'" class="pitch-activity lazyload-bg" data-background-image="./images/backgrounds/pitches_action1.png" style="background-size: cover; background-position: top left;">
+        <div id="1_2_pitches" x-show="mode === '1_2_pitches_match-sounds'" class="pitch-activity lazyload-bg" data-background-image="./images/backgrounds/pitches_action1.png"
+        style="background-size: cover; background-position: top left; background-image: 1s ease">
           <div class="mode-header">
             <button class="back-to-main" @click="setMode('main')" aria-label="Back to main menu">
               <span style="font-size: 24px;">🏠</span>
