progress  im und export mit alert

--- a/src/index.html
+++ b/src/index.html
@@ -1025,7 +1025,7 @@
     const isAndroid = /Android/i.test(navigator.userAgent);
     
     // Definitionen für verschiedene Back-Button-Verhalten
-    let currentConfirmMessage = 'Do you really want to leave this page?';
+    let currentConfirmMessage = 'Attention! Do you really want to leave this page?';
     
     // String-Aktualisierungsfunktion - wird aufgerufen, wenn Alpine.store aktualisiert wird
     function updateBackButtonStrings() {
