1_1: new sloth bg image

--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@
         
         <!-- High or Low Activity -->
         <div id="1_1_pitches" x-show="mode === '1_1_pitches_high_or_low'" class="pitch-activity lazyload-bg" data-background-image="./images/backgrounds/pitches_action1_1_sloth_mouse.png" style="background-size: cover; background-position: top left;
-        background-image: url('./images/backgrounds/pitches_action1_1_sloth_mouse_small.jpg');
+        background-image: url('./images/backgrounds/pitches_action1_1_sloth_mouse.png');
         height: 100vh;
         width: 100%;
         background-size: 100% 100%;
