WIP: Global footer for all activities with an invers edge
(einer inneren div mit weißem Hintergrund und abgerundeten Ecken um den unteren rand des hintergrunds mit dem weiss des unteren bereichs optisch zu verbinden)

--- a/src/index.html
+++ b/src/index.html
@@ -995,6 +995,11 @@
       </div>
     </section>
 
+    <!-- Global footer for all activities with an invers edge
+    <div class="bottom_round_edge">
+      <div class="footer_inner"></div>
+    </div>-->
+
   </main>
 
 <script>
