--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
               :class="{ 'active': isActive }"
               style="display: auto;"
             >
-              🔊 <span x-text="$store.strings?.high_or_low || 'high_or_lowlodies'"></span>
+              🔊 <span x-text="$store.strings?.high_or_low || 'High or Low?'"></span>
             </button>
             <button 
               @click="$dispatch('set-pitch-mode', '1_2_pitches_match-sounds'); window.innerWidth < 1024 ? menuOpen = false : null"
